--- a/templates/index.html
+++ b/templates/index.html
@@ -612,6 +612,18 @@
                         </div>
                     </div>
 
+                    <div class="message bot-message">
+                        <div class="message-header">
+                            <div class="bot-avatar">
+                                <i class="fas fa-robot"></i>
+                            </div>
+                            <div class="message-sender bot-sender">GymGuru Assistant</div>
+                        </div>
+                        <div class="message-content">
+                            What is your name?
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="status-bar">
@@ -733,6 +745,18 @@
                         <div class="message-content">
                             Welcome to GymGuru! 🏋️‍♂️ I'll help you complete your registration. Let's start with a few
                             questions to create your personalized fitness profile.
+                        </div>
+                    </div>
+
+                    <div class="message bot-message">
+                        <div class="message-header">
+                            <div class="bot-avatar">
+                                <i class="fas fa-robot"></i>
+                            </div>
+                            <div class="message-sender bot-sender">GymGuru Assistant</div>
+                        </div>
+                        <div class="message-content">
+                            What is your name?
                         </div>
                     </div>
                 `;
